--- a/src/app/components/heroes/hero-card/hero-card.component.html
+++ b/src/app/components/heroes/hero-card/hero-card.component.html
@@ -1,12 +1,12 @@
-<p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+<p-card header={{hero?.name}} [style]="{ width: '360px' }">
     <ng-template pTemplate="header">
-        <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+        <img alt="Card" src={{hero?.imagePath}} />
     </ng-template>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt 
-        quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
-    </p>
+
+    <div>City: {{hero?.cityId}}</div>
+    <div>Battalion: {{hero?.battalionId}}</div>
+    
     <ng-template pTemplate="footer">
-        <button style="width: 100%; justify-content: center;" label="Details" class="p-element p-ripple p-button-raised p-button-text p-button-plain mb-2 p-button p-component">Details</button>
+        <button label="Details" class="p-element p-ripple p-button-raised p-button-text p-button-plain mb-2 p-button p-component">Details</button>
     </ng-template>
 </p-card>
