Add routing, hero details and home page

--- a/src/app/components/heroes/hero-card/hero-card.component.scss
+++ b/src/app/components/heroes/hero-card/hero-card.component.scss
@@ -1,6 +1,7 @@
 img {
     max-height: 300px; 
     min-height: 300px; 
+    width: auto;
     object-fit: cover; 
     border-top-left-radius: 5px; 
     border-top-right-radius: 5px;
