--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,8 +1,12 @@
 <!-- <app-hero-cards></app-hero-cards> -->
 <!-- app-hero-details -->
+
 <div class="grid">
     <div class="col-fixed" style="width:250px">Fixed</div>      
     <!-- <app-hero-details [ngClass]="'col'"></app-hero-details> -->
     <!-- <app-hero-cards [ngClass]="'col'"></app-hero-cards> -->
-    <router-outlet></router-outlet>
+    <div class="col">
+        
+        <router-outlet></router-outlet>
+    </div>
 </div>
