--- a/src/app/components/heroes/hero-details/hero-details.component.html
+++ b/src/app/components/heroes/hero-details/hero-details.component.html
@@ -1,5 +1,5 @@
 <div class="col">
-    <div class="grid border-double mt-5 mx-2 border-round h-auto md:h-auto lg:h-screen">
+    <div class="grid border-double mt-5 mx-2 border-round h-screen md:h-auto lg:h-auto">
      <div class="col-12 md:col-6 lg:col-4">
          <img [src]="hero?.imagePath" class="border-round m-2"  style="width: 100%; display: block;" />
          <!-- <p-galleria [(value)] = "herolist" [showItemNavigators]="true" [showThumbnails]="false" [showIndicators]="true" [showIndicatorsOnItem]="true" 
