Add button detail

--- a/src/app/components/heroes/hero-card/hero-card.component.html
+++ b/src/app/components/heroes/hero-card/hero-card.component.html
@@ -7,6 +7,6 @@
     <div>Battalion: {{hero?.battalionId}}</div>
     
     <ng-template pTemplate="footer">
-        <button label="Details" class="p-element p-ripple p-button-raised p-button-text p-button-plain mb-2 p-button p-component">Details</button>
+        <button label="Details" class="p-element p-ripple p-button-raised p-button-text p-button-plain mb-2 p-button p-component" [routerLink]="['/hero-details', hero?.id]">Details</button>
     </ng-template>
 </p-card>
