--- a/src/app/components/heroes/hero-details/hero-details.component.html
+++ b/src/app/components/heroes/hero-details/hero-details.component.html
@@ -14,8 +14,8 @@
              </ng-template>
          </p-galleria> -->
                 <div class="m-2 text-4xl">{{hero?.name}}</div>
-                <div class="m-2 text-3xl">City: {{hero?.cityId}}</div>
-                <div class="m-2 text-3xl">Battalion: {{hero?.battalionId}}</div>
+                <div class="m-2 text-3xl">City: {{city}}</div>
+                <div class="m-2 text-3xl">Battalion: {{battalion}}</div>
      </div>
      <div class="col-12 md:col-6 lg:col-8 ">
         <div class="text-sm md:text-lg lg:text-xl">
