Add working file logic, implement log in/out

--- a/src/app/components/heroes/hero-card/hero-card.component.html
+++ b/src/app/components/heroes/hero-card/hero-card.component.html
@@ -1,6 +1,6 @@
-<p-card header={{hero?.name}} [style]="{ width: '330px' }">
+<p-card header={{hero?.name}} [style]="{ width: '350px'}">
     <ng-template pTemplate="header">
-        <img alt="Card" src={{hero?.imagePath}} />
+        <img alt="Card" src={{imgPath}} />
     </ng-template>
 
     <div>City: {{city}}</div>
