--- a/src/app/components/heroes/hero-cards/hero-cards.component.html
+++ b/src/app/components/heroes/hero-cards/hero-cards.component.html
@@ -1,3 +1,3 @@
-<div class="col">
+<div class="col card flex flex-wrap gap-3 justify-content-center">
     <app-hero-card class="card" *ngFor="let h of heroes" [hero]="h"></app-hero-card>
 </div>
