--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
                 </p-button>
             </div>
             <div *ngIf="accountService.isAuthorized()">
-                <p-button label="Secondary" styleClass="p-button-secondary mx-2"  (click)="logout()">
+                <p-button styleClass="p-button-secondary mx-2"  (click)="logout()">
                     logout  <span class="pi pi-user"></span>
                 </p-button>
                 
