Filter by Battalion and city

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,8 +10,8 @@
                 </p-button>
             </div>
             <div *ngIf="accountService.isAuthorized()">
-                <p-button label="Secondary" styleClass="p-button-secondary mx-2"  (click)="logout()">
-                    logout  <span class="pi pi-user"></span>
+                <p-button label="Logout" styleClass="p-button-secondary mx-2"  (click)="logout()">
+                 <span class="pi pi-user"></span>
                 </p-button>
                 
             </div>
