--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -6,6 +6,6 @@
         <div class="field">
             <input pInputText formControlName="password" type="password" placeholder="Password"/>
         </div>
-        <p-button type="submit" styleClass="p-button-outlined p-button-primary mb-2" label="Create"></p-button>
+        <p-button type="submit" styleClass="p-button-outlined p-button-primary mb-2" label="login"></p-button>
     </div>
 </form>
