--- a/src/app/components/heroes/hero-cards/hero-cards.component.html
+++ b/src/app/components/heroes/hero-cards/hero-cards.component.html
@@ -1,40 +1,42 @@
-
 <div class="grid">
+
   <div class="col-fixed">
     <p-listbox
     [options]="battalions"
-    [(ngModel)]="selectedBattalion"
-    optionLabel="name"
-    [filter]="true"
-    [listStyle]="{ 'max-height': '250px' }"
-    [style]="{ width: '15rem' }"
+      [(ngModel)]="selectedBattalion"
+      optionLabel="name"
+      [filter]="true"
+      [listStyle]="{ 'max-height': '250px' }"
+      [style]="{ width: '15rem' }"
       (click)="getListbyBattalion()"
       styleClass="mb-3"
       ></p-listbox>
       <p-listbox
-        [options]="cities"
-        [(ngModel)]="selectedCity"
-        optionLabel="name"
-        [filter]="true"
-        [listStyle]="{ 'max-height': '250px' }"
-        [style]="{ width: '15rem' }"
-        (click)="getListbyCity()"
-        styleClass="mb-3"
+      [options]="cities"
+      [(ngModel)]="selectedCity"
+      optionLabel="name"
+      [filter]="true"
+      [listStyle]="{ 'max-height': '250px' }"
+      [style]="{ width: '15rem' }"
+      (click)="getListbyCity()"
+      styleClass="mb-3"
       ></p-listbox>
+    </div>
+    <div class="col">
+      <div class="flex justify-content-center min-w-500">
+        <span class="p-input-icon-left">
+          <i class="pi pi-search" (click)="searchByName()"></i>
+          <input type="text" [(ngModel)]="searchValue" pInputText />
+        </span>
+      </div>
+      <div class="col card flex flex-wrap gap-3 justify-content-center">
+        <app-hero-card
+        class="card"
+        *ngFor="let h of heroes"
+        [hero]="h"
+        ></app-hero-card>
+      </div>
+    </div>
+    
   </div>
-  <div class="col card flex flex-wrap gap-3 justify-content-center">
-  <div class="flex justify-content-center min-w-500" >
-    <span class="p-input-icon-left">
-        <i class="pi pi-search" (click)="searchByName()"></i>
-        <input type="text" [(ngModel)]="searchValue" pInputText/>
-    </span>
-</div>
-
-    <app-hero-card
-      class="card"
-      *ngFor="let h of heroes"
-      [hero]="h"
-    ></app-hero-card>
-  </div>
-</div>
-
+    
