--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,17 +2,19 @@
     <p-menubar [model]="items">
         <ng-template pTemplate="end">
             <div *ngIf="!accountService.isAuthorized()">
-                <p-button  styleClass="p-button-link mx-2"  routerLink="/register">
-                    <span class="pi pi-user-plus"> Register </span> 
+                <p-button  styleClass="p-button-info p-button-text"  routerLink="/register">
+                    Register
+                    <span class="pi pi-user-plus"></span> 
                 </p-button>
-                <p-button  styleClass="p-button-outlined p-button-success mx-2"  routerLink="/login">
-                    <span class="pi pi-user"> Login</span>
+                <p-button  styleClass="p-button-success p-button-text"  routerLink="/login">
+                    Login
+                    <span class="pi pi-user"></span>
                 </p-button>
             </div>
             <div *ngIf="accountService.isAuthorized()">
-                <p-button label="Logout" styleClass="p-button-secondary mx-2"  (click)="logout()">
-                 <span class="pi pi-user"></span>
-
+                <p-button styleClass="p-button-secondary p-button-text"  (click)="logout()">
+                    Logout
+                    <span class="pi pi-user"></span>
                 </p-button>
                 
             </div>
