--- a/src/app/components/heroes/hero-cards/hero-cards.component.html
+++ b/src/app/components/heroes/hero-cards/hero-cards.component.html
@@ -25,7 +25,7 @@
     <div class="col">
       <div class="flex justify-content-center min-w-500">
         <span class="p-input-icon-left">
-          <i class="pi pi-search" (click)="searchByName()"></i>
+          <i class="pi pi-search" (click)="searchByName()" (dblclick)="getAllHeroes()"></i>
           <input type="text" [(ngModel)]="searchValue" pInputText />
         </span>
       </div>
