--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,10 @@
+h1 {
+    margin: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size:x-large;
+}
+
 span {
     margin-left: 5px;
 }
